syntax = "proto3";
package messages;

option java_package = "dev.yanshouwang.camerax";

message Command {
  CommandCategory category = 1;
  CameraSelector selector = 2;
  string uuid = 3;
  bool torch_state = 4;
  double zoom_value = 5;
  Size size = 6;
  Offset offset = 7;
}

enum CommandCategory {
  COMMAND_CATEGORY_CAMERA_CONTROLLER_CREATE = 0;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_OPEN = 1;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_CLOSE = 2;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_TORCH = 3;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_ZOOM = 4;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_FOCUS_AUTOMATICALLY = 5;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_FOCUS_MANUALLY = 6;
  COMMAND_CATEGORY_CAMERA_CONTROLLER_DISPOSE = 7;
  COMMAND_CATEGORY_IMAGE_PROXY_CLOSE = 8;
}

message CameraSelector {
  CameraFacing facing = 1;
}

enum CameraFacing {
  CAMERA_FACING_BACK = 0;
  CAMERA_FACING_FRONT = 1;
}

message CameraValue {
  TextureValue texture_value = 1;
  TorchValue torch_value = 2;
  ZoomValue zoom_value = 3;
}

message TextureValue {
  int32 id = 1;
  int32 width = 2;
  int32 height = 3;
  int32 quarter_turns = 4;
}

message TorchValue {
  bool available = 1;
  bool state = 2;
}

message ZoomValue {
  double minimum = 1;
  double maximum = 2;
  double value = 3;
}

message Size {
  double width = 1;
  double height = 2;
}

message Offset {
  double x = 1;
  double y = 2;
}

message Event {
  EventCategory category = 1;
  int32 quarter_turns = 2;
  string uuid = 3;
  bool torch_state = 4;
  double zoom_value = 5;
  ImageProxy image_proxy = 6;
}

enum EventCategory {
  EVENT_CATEGORY_QUARTER_TURNS = 0;
  EVENT_CATEGORY_CAMERA_CONTROLLER_TORCH_STATE = 1;
  EVENT_CATEGORY_CAMERA_CONTROLLER_ZOOM_VALUE = 2;
  EVENT_CATEGORY_CAMERA_CONTROLLER_IMAGE_PROXY = 3;
}

message ImageProxy {
  string uuid = 1;
  bytes data = 2;
  int32 width = 3;
  int32 height = 4;
}